styles: fix height for select multiple on ios

--- a/src/styles/blocks/_task-form.scss
+++ b/src/styles/blocks/_task-form.scss
@@ -29,6 +29,11 @@
     }
 
     &__select-tags {
+        -webkit-appearance: menulist-button;
+        line-height: 25px;
+    }
+
+    &__select-tags {
         height: fit-content;
         overflow-y: auto;
     }
